--- a/templates/login.html
+++ b/templates/login.html
@@ -107,7 +107,7 @@
                 <form id="Login" action="/login" method="POST">
 
                     <div class="form-group">
-                        <input name="username" type="email" class="form-control" id="inputEmail"
+                        <input name="email" type="email" class="form-control" id="inputEmail"
                             placeholder="Email Address" required />
                     </div>
 
