--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
 <head>
     <title>Xeron</title>
@@ -90,7 +90,7 @@
             <tr>
                 <td>{{ result[0] }}</td>
                 <td>{{ result[1] }}</td>
-                <td><a href="/fetch/{{ result[2] }}">{{ result[2] }}</a></td>
+                <td><a href="/fetch/{{ result[2] }}" target="_blank">{{ result[2] }}</a></td>
             </tr>
             {% endfor %}
         </tbody>
