--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
 <head>
     <title>Xeron</title>
@@ -121,9 +121,7 @@
                 </form>
                 <p class="back"> Don't have an account? <a href="/register">Sign up</a> </p>
             </div>
-            <p class="botto-text"> © Noirdemort<br> A <strong>Stygian</strong> Product, a
-                <strong>Cimmerian</strong>
-                initiative.</p>
+            <p class="botto-text"> © Noirdemort<br> A <strong>Stygian</strong> Product.</p>
         </div>
     </div>
 
