--- a/templates/register.html
+++ b/templates/register.html
@@ -134,9 +134,7 @@
                 </form>
                 <p class="back"> Already have an account? <a href="/login">Login</a> </p>
             </div>
-            <p class="botto-text"> © Noirdemort<br> A <strong>Stygian</strong> Product, a
-                <strong>Cimmerian</strong>
-                initiative.</p>
+            <p class="botto-text"> © Noirdemort<br> A <strong>Stygian</strong> Product.</p>
         </div>
     </div>
 
