--- a/templates/login.html
+++ b/templates/login.html
@@ -51,9 +51,10 @@
     }
 
     .botto-text {
-        color: teal;
-        font-size: 17px;
+        color:yellow;
+        font-size: 25px;
         margin: auto;
+        margin-bottom: 2%;
     }
 
     .login-form .form-group {
@@ -121,6 +122,7 @@
                 </form>
                 <p class="back"> Don't have an account? <a href="/register">Sign up</a> </p>
             </div>
+            <br><br>
             <p class="botto-text"> © Noirdemort<br> A <strong>Stygian</strong> Product.</p>
         </div>
     </div>
